manifests/dev/argo-workflows/Deployment-argo-workflows-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: 3.6.5
    helm.sh/chart: argo-workflows-11.1.10
  name: argo-workflows-controller
  namespace: argo-workflows
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: argo-workflows
      app.kubernetes.io/name: argo-workflows
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: e382293f26ea618c86b97b2f1dc6640912ef7d1fa63ff4a28fdc320d1f71c5e1
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: argo-workflows
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: argo-workflows
        app.kubernetes.io/part-of: argo-workflows
        app.kubernetes.io/version: 3.6.5
        helm.sh/chart: argo-workflows-11.1.10
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: controller
                    app.kubernetes.io/instance: argo-workflows
                    app.kubernetes.io/name: argo-workflows
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: true
      containers:
        - args:
            - --configmap
            - argo-workflows-controller
            - --executor-image
            - docker.io/bitnami/argo-workflow-exec:3.6.5-debian-12-r0
            - --executor-image-pull-policy
            - IfNotPresent
            - --loglevel
            - info
            - --gloglevel
            - "0"
            - --workflow-workers
            - "32"
          image: docker.io/bitnami/argo-workflow-controller:3.6.5-debian-12-r0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 6060
            initialDelaySeconds: 90
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 30
          name: controller
          ports:
            - containerPort: 9090
              name: metrics
            - containerPort: 6060
              name: controller
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: 6060
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: argo-workflows-controller
