manifests/dev/argo-workflows/Service-argo-workflows-controller.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsEncrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: 3.6.5
    helm.sh/chart: argo-workflows-11.1.10
  name: argo-workflows-controller
  namespace: argo-workflows
spec:
  ports:
    - name: tcp-telemetry
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/name: argo-workflows
  sessionAffinity: None
  type: ClusterIP
