manifests/dev/argo-workflows/Service-argo-workflows-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: 3.6.5
    helm.sh/chart: argo-workflows-11.1.10
  name: argo-workflows-server
  namespace: argo-workflows
spec:
  ports:
    - name: http
      port: 80
      targetPort: web
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/name: argo-workflows
  type: ClusterIP
