manifests/dev/argo-workflows/Ingress-argo-workflows-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsEncrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: 3.6.5
    helm.sh/chart: argo-workflows-11.1.10
  name: argo-workflows-server
  namespace: argo-workflows
spec:
  ingressClassName: traefik
  rules:
    - host: argo-workflows.dev.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: argo-workflows-server
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - argo-workflows.dev.kronkltd.net
      secretName: argo-workflows.dev.kronkltd.net-tls
