manifests/dev/argo-workflows/NetworkPolicy-argo-workflows-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: 3.6.5
    helm.sh/chart: argo-workflows-11.1.10
  name: argo-workflows-server
  namespace: argo-workflows
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 2746
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: argo-workflows
      app.kubernetes.io/name: argo-workflows
      app.kubernetes.io/part-of: argo-workflows
  policyTypes:
    - Ingress
    - Egress
